<resources>
    <string name="app_name">AppointmentMaster</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="navtitle">AppointmentMaster</string>
    <string name="navsubtitle">you@appointmentmaster.com</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>

    <string name="menu_appointment">Appointment</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_service">Service</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_sp_signIn">SP Sign In</string>
    <string name="menu_sp_signUp">SP Sign Up</string>
    <string name="menu_signIn">User Sign In</string>
    <string name="menu_signUp">User Sign Up</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search time, location, service etc.</string>
    <string name="menu_chat">Messages</string>
    <string name="menu_message">Message</string>
    <string name="menu_user_sign_in">User Sign In</string>
    <string name="menu_user_sign_up">User Sign Up</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1:980981162288:android:83a41dfbeb9f0c2af2a8f5</string>
    <string name="facebook_login_protocol_scheme" translatable="false">https://www.facebook.com/PareshSharmaL</string>
    <!-- Twitter consumer key and secret -->
    <!--    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>-->
    <!--    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>-->
</resources>
