<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_1"
            android:title="@string/menu_home" />

        <!--        <item-->
        <!--            android:id="@+id/nav_gallery"-->
        <!--            android:icon="@drawable/ic_menu_gallery"-->
        <!--            android:title="@string/menu_gallery" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_slideshow"-->
        <!--            android:icon="@drawable/ic_menu_slideshow"-->
        <!--            android:title="@string/menu_slideshow" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_tools"-->
        <!--            android:icon="@drawable/ic_menu_manage"-->
        <!--            android:title="@string/menu_tools" />-->
    </group>

    <item android:title="Task">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_appointment"
                    android:icon="@drawable/appointment_1"
                    android:title="@string/menu_appointment" />

                <item
                    android:id="@+id/nav_schedule"
                    android:icon="@drawable/schedule_1"
                    android:title="@string/menu_schedule" />

                <item
                    android:id="@+id/nav_service"
                    android:icon="@drawable/service"
                    android:title="@string/menu_service" />
            </group>
        </menu>
    </item>

    <item android:title="Communication">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_message"
                    android:icon="@drawable/chat"
                    android:title="@string/menu_chat" />
            </group>
        </menu>
    </item>

    <item android:title="User">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_user_sign_in"
                    android:icon="@drawable/signin"
                    android:title="@string/menu_signIn" />

                <item
                    android:id="@+id/nav_user_sign_up"
                    android:icon="@drawable/signup"
                    android:title="@string/menu_signUp" />
            </group>
        </menu>
    </item>

    <item android:title="Service Provider">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_sp_sign_in"
                    android:icon="@drawable/service_2"
                    android:title="@string/menu_sp_signIn" />

                <item
                    android:id="@+id/nav_sp_sign_up"
                    android:icon="@drawable/sp_signup"
                    android:title="@string/menu_sp_signUp" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">

    </group>

    <item android:title="Account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>

    <!--    <group>-->

    <!--    </group>-->

    <!--    <item android:title="Task">-->
    <!--        <menu>-->

    <!--        </menu>-->
    <!--    </item>-->

    <!--    <item android:title="Communicate">-->
    <!--        <menu>-->
    <!--            <item-->
    <!--                android:id="@+id/nav_share"-->
    <!--                android:icon="@drawable/ic_menu_share"-->
    <!--                android:title="@string/menu_share" />-->
    <!--            <item-->
    <!--                android:id="@+id/nav_send"-->
    <!--                android:icon="@drawable/ic_menu_send"-->
    <!--                android:title="@string/menu_send" />-->
    <!--        </menu>-->
    <!--    </item>-->

    <!--    <item android:title="Communicate">-->
    <!--        <menu>-->

    <!--        </menu>-->
    <!--    </item>-->

</menu>
