<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="spksolutions.appointmentmaster.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_appointment"
        android:name="spksolutions.appointmentmaster.mui.appointment.AppointmentFragment"
        android:label="@string/menu_appointment"
        tools:layout="@layout/fragment_appointment" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="spksolutions.appointmentmaster.mui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_service"
        android:name="spksolutions.appointmentmaster.mui.service.ServiceFragment"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_service" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="spksolutions.appointmentmaster.mui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

<!--    <fragment-->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:name="spksolutions.appointmentmaster.ui.gallery.GalleryFragment"-->
<!--        android:label="@string/menu_gallery"-->
<!--        tools:layout="@layout/fragment_gallery" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_slideshow"-->
<!--        android:name="spksolutions.appointmentmaster.ui.slideshow.SlideshowFragment"-->
<!--        android:label="@string/menu_slideshow"-->
<!--        tools:layout="@layout/fragment_slideshow" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_tools"-->
<!--        android:name="spksolutions.appointmentmaster.ui.tools.ToolsFragment"-->
<!--        android:label="@string/menu_tools"-->
<!--        tools:layout="@layout/fragment_tools" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_share"-->
<!--        android:name="spksolutions.appointmentmaster.ui.share.ShareFragment"-->
<!--        android:label="@string/menu_share"-->
<!--        tools:layout="@layout/fragment_share" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_send"-->
<!--        android:name="spksolutions.appointmentmaster.ui.send.SendFragment"-->
<!--        android:label="@string/menu_send"-->
<!--        tools:layout="@layout/fragment_send" />-->



</navigation>